# llvm_pipeline_engineering

./: .gitignore  GA.py  README.md  compiler_template.py  conf.py  demo.py  demo_xGA.py  llvm.py  util_GA.py  util_self_test.py  xGA.py
demo_Ok_proj/: CMakeLists.txt  demo.make  demo.py  demo_Ok.py  demo_hack.sh  hidden_numbers.c  main.c  no_opt.c  opt.c
pipexplore/: batch_map.py  interface.py  llvm.py  runner.py  xGA.py
test/: a3.c  a4.c  a5.c  a6.c  a7.c  a7.ll  a7.out
